# streamlit-pdf

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICES  README.md  pyproject.toml
.github/: repo_meta.yaml
.github/workflows/: enforce-pre-commit.yml  playwright.yml  release.yml  ts-tests.yml
e2e_playwright/: conftest.py  e2e_utils.py  pdf_uploader_viewer.py  pdf_viewer.py  pdf_viewer_test.py  pytest.ini  test-requirements.txt
scripts/: audit_frontend_licenses.py  check_license_headers.py  make_notices.py  slack_notification.py  update_version.py
streamlit_pdf/: __init__.py  pyproject.toml
streamlit_pdf/frontend/: .env  .prettierrc  index.html  package-lock.json  package.json  streamlit-component-v2-lib-0.1.0.tgz  vite.config.ts  vitest.config.ts
streamlit_pdf/frontend/public/: .gitignore
streamlit_pdf/frontend/src/: PdfViewer.module.css  PdfViewer.test.tsx  PdfViewer.tsx  index.css  index.tsx  urlUtils.test.tsx  urlUtils.ts
streamlit_pdf/frontend/src/test/: setup.ts
