# Copyright (c) Snowflake Inc. (2025)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-pdf"
version = "1.0.5"
description = "A Streamlit component for viewing PDF files"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Snowflake Inc", email = "hello@streamlit.io"},
]
maintainers = [
    {name = "Snowflake Inc", email = "hello@streamlit.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
keywords = ["streamlit", "pdf", "viewer", "react", "component"]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
]

[project.urls]
Homepage = "https://streamlit.io"
"Source Code" = "https://github.com/streamlit/streamlit-pdf"
"Bug Tracker" = "https://github.com/streamlit/streamlit-pdf/issues"
Community = "https://discuss.streamlit.io/"
Twitter = "https://twitter.com/streamlit"

[project.optional-dependencies]
devel = [
    "wheel",
    "pytest==7.4.0",
    "playwright==1.48.0",
    "requests==2.31.0",
    "pytest-playwright-snapshot==1.0",
    "pytest-rerunfailures==12.0",
]

[tool.setuptools]
packages = ["streamlit_pdf"]
include-package-data = true

[tool.setuptools.package-data]
streamlit_pdf = [
    "frontend/build/**/*",
    "frontend/index.html",
]

[tool.setuptools.exclude-package-data]
streamlit_pdf = [
    "frontend/node_modules/**/*",
    "frontend/src/**/*",
    "frontend/package-lock.json",
    "frontend/package.json",
    "frontend/tsconfig.json",
    "frontend/vite.config.ts",
    "frontend/vitest.config.ts",
    "frontend/.gitignore",
]