# Copyright (c) Snowflake Inc. (2025)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-pdf"
version = "1.0.8"
description = "A Streamlit component for viewing PDF files"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICES"]
authors = [{ name = "Snowflake Inc", email = "hello@streamlit.io" }]
maintainers = [{ name = "Snowflake Inc", email = "hello@streamlit.io" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
keywords = ["streamlit", "pdf", "viewer", "react", "component"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://streamlit.io"
"Source Code" = "https://github.com/streamlit/streamlit-pdf"
"Bug Tracker" = "https://github.com/streamlit/streamlit/issues"
Community = "https://discuss.streamlit.io/"
Twitter = "https://twitter.com/streamlit"

[project.optional-dependencies]
devel = [
    "wheel",
    "pytest==7.4.0",
    "playwright==1.49.*",
    "requests==2.31.0",
    "pytest-playwright-snapshot==1.0",
    "pytest-rerunfailures==12.0",
]
with-streamlit = ["streamlit>=1.51.0"]

[tool.setuptools]
# Ship built frontend assets (via package-data) alongside Python modules.
include-package-data = true

# Explicitly list frontend build dirs as "packages" to suppress setuptools
# warnings about "importable" directories not present in `packages`. These are
# asset-only namespaces produced by the frontend build, not Python code, but
# setuptools currently treats any directory as importable. Declaring them avoids
# noisy warnings while still relying on package-data to actually include files.
packages = [
    "streamlit_pdf",
    "streamlit_pdf.frontend.build",
    "streamlit_pdf.frontend.build.assets",
    "streamlit_pdf.frontend.build.assets.cmaps",
    "streamlit_pdf.frontend.build.assets.standard_fonts",
    "streamlit_pdf.frontend.build.assets.workers",
]

[tool.setuptools.package-data]
# Include all built frontend assets in the distribution. This is what the
# Streamlit component serves at runtime.
streamlit_pdf = ["frontend/build/**/*", "pyproject.toml"]

[tool.setuptools.exclude-package-data]
# Exclude dev-only frontend sources and tooling from the distribution to keep
# wheels lean and avoid shipping unnecessary or large files.
streamlit_pdf = [
    "frontend/node_modules/**/*",
    "frontend/src/**/*",
    "frontend/package-lock.json",
    "frontend/package.json",
    "frontend/tsconfig.json",
    "frontend/vite.config.ts",
    "frontend/vitest.config.ts",
    "frontend/.gitignore",
]
